# rugguard-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
src/rugguard_mcp/: __init__.py  __main__.py  errors.py  server.py  spend_cap.py  wallet_helper.py  x402_client.py
